# Opengl-Alleyway-Scene

./: CMakeLists.txt  README.md
Tests/: alleyway.html  alleyway_camera.html  house.html  textures.html  textures3.html
assets/models/: barrier_license.txt  barrier_scene.gltf  corpse_scene.gltf  door_scene.gltf  dumpster_license.txt  dumpster_scene.gltf  house_license.txt  house_scene.gltf  lamp_license.txt  lamp_scene.gltf  lamppost_scene.gltf  license.txt  neon_open_license.txt  neon_open_scene.gltf  neonlights_scene.gltf  neonlights_scenelicense.txt  sign_license.txt  sign_scene.gltf  tape_license.txt  tape_scene.gltf  telephone_license.txt  telephone_scene.gltf  window_scene.gltf
assets/textures/: cobblestone_pavement_1k.gltf
include/glad/: glad.h
shaders/: bloom_final.glsl  blur_fragment.glsl  flickering_frag.glsl  flickering_fragment.glsl  fragment.glsl  fragment2.glsl  fragment3.glsl  screen_vertex.glsl  shadow_frag.glsl  shadow_geom.glsl  shadow_vertex.glsl  vertex.glsl  wet_fragment.glsl
src/: glad.c  main.cpp  model.h  test.cpp  test_triangle.cpp
src/headers/: GLTFModel.h  Mesh.h  camera.h  shaders.h
